--- a/BabyPoo/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/BabyPoo/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -3,41 +3,41 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-  <group android:scaleX="2.4"
-      android:scaleY="2.4">
-    <group>
-      <clip-path
-          android:pathData="M0,0 L45,0 45,45 0,45 0,0Z"/>
-      <path
-          android:pathData="M45,23.125C45,21.076 43.787,19.37 42.159,18.894 40.459,9.573 32.313,2.5 22.5,2.5 12.688,2.5 4.541,9.573 2.841,18.894 1.213,19.37 0,21.076 0,23.125c0,2.17 1.359,3.96 3.138,4.302 2.199,8.658 10.021,15.072 19.362,15.072 9.341,-0 17.164,-6.415 19.362,-15.072C43.64,27.085 45,25.295 45,23.125"
-          android:fillColor="#ffdc5d"
-          android:strokeColor="#00000000"
-          android:fillType="nonZero"/>
-      <path
-          android:pathData="m22.5,31.25c-3.75,-0 -5,-1.25 -5,1.25 0,2.5 2.5,5 5,5 2.5,-0 5,-2.5 5,-5 0,-2.5 -1.25,-1.25 -5,-1.25"
-          android:fillColor="#662214"
-          android:strokeColor="#00000000"
-          android:fillType="nonZero"/>
-      <path
-          android:pathData="M31.25,23.125C31.25,24.851 29.85,26.25 28.125,26.25 26.4,26.25 25,24.851 25,23.125 25,21.399 26.4,20 28.125,20 29.85,20 31.25,21.399 31.25,23.125"
-          android:fillColor="#662214"
-          android:strokeColor="#00000000"
-          android:fillType="nonZero"/>
-      <path
-          android:pathData="M20,23.125C20,24.851 18.6,26.25 16.875,26.25 15.15,26.25 13.75,24.851 13.75,23.125 13.75,21.399 15.15,20 16.875,20 18.6,20 20,21.399 20,23.125"
-          android:fillColor="#662214"
-          android:strokeColor="#00000000"
-          android:fillType="nonZero"/>
-      <path
-          android:pathData="M22.5,32.5 L25,32.5 25,33.75C25,33.75 25,35 23.75,35 22.5,35 22.5,33.75 22.5,33.75L22.5,32.5Z"
-          android:fillColor="#ffffff"
-          android:strokeColor="#00000000"
-          android:fillType="nonZero"/>
-      <path
-          android:pathData="m22.477,13.75 l-0.039,-0c-1.485,-0 -2.876,-0.572 -3.919,-1.63 -0.933,-0.945 -1.423,-2.234 -1.345,-3.559 0.04,-0.69 0.614,-1.201 1.321,-1.169 0.689,0.04 1.215,0.634 1.174,1.324 -0.035,0.619 0.194,1.229 0.63,1.671 0.574,0.581 1.339,0.905 2.156,0.911 0.816,-0.045 1.587,-0.309 2.169,-0.882 1.622,-1.6 1.641,-4.221 0.041,-5.845 -2.124,-2.151 -5.6,-2.175 -7.754,-0.052 -0.493,0.485 -1.284,0.479 -1.768,-0.012 -0.484,-0.491 -0.479,-1.283 0.012,-1.768 3.133,-3.09 8.196,-3.055 11.287,0.076C29.014,5.42 28.985,9.605 26.381,12.172 25.334,13.206 23.947,13.75 22.477,13.75"
-          android:fillColor="#ef9645"
-          android:strokeColor="#00000000"
-          android:fillType="nonZero"/>
+    <group
+        android:scaleX="2.4"
+        android:scaleY="2.4">
+        <group>
+            <clip-path android:pathData="M0,0 L45,0 45,45 0,45 0,0Z" />
+            <path
+                android:fillColor="#ffdc5d"
+                android:fillType="nonZero"
+                android:pathData="M45,23.125C45,21.076 43.787,19.37 42.159,18.894 40.459,9.573 32.313,2.5 22.5,2.5 12.688,2.5 4.541,9.573 2.841,18.894 1.213,19.37 0,21.076 0,23.125c0,2.17 1.359,3.96 3.138,4.302 2.199,8.658 10.021,15.072 19.362,15.072 9.341,-0 17.164,-6.415 19.362,-15.072C43.64,27.085 45,25.295 45,23.125"
+                android:strokeColor="#00000000" />
+            <path
+                android:fillColor="#662214"
+                android:fillType="nonZero"
+                android:pathData="m22.5,31.25c-3.75,-0 -5,-1.25 -5,1.25 0,2.5 2.5,5 5,5 2.5,-0 5,-2.5 5,-5 0,-2.5 -1.25,-1.25 -5,-1.25"
+                android:strokeColor="#00000000" />
+            <path
+                android:fillColor="#662214"
+                android:fillType="nonZero"
+                android:pathData="M31.25,23.125C31.25,24.851 29.85,26.25 28.125,26.25 26.4,26.25 25,24.851 25,23.125 25,21.399 26.4,20 28.125,20 29.85,20 31.25,21.399 31.25,23.125"
+                android:strokeColor="#00000000" />
+            <path
+                android:fillColor="#662214"
+                android:fillType="nonZero"
+                android:pathData="M20,23.125C20,24.851 18.6,26.25 16.875,26.25 15.15,26.25 13.75,24.851 13.75,23.125 13.75,21.399 15.15,20 16.875,20 18.6,20 20,21.399 20,23.125"
+                android:strokeColor="#00000000" />
+            <path
+                android:fillColor="#ffffff"
+                android:fillType="nonZero"
+                android:pathData="M22.5,32.5 L25,32.5 25,33.75C25,33.75 25,35 23.75,35 22.5,35 22.5,33.75 22.5,33.75L22.5,32.5Z"
+                android:strokeColor="#00000000" />
+            <path
+                android:fillColor="#ef9645"
+                android:fillType="nonZero"
+                android:pathData="m22.477,13.75 l-0.039,-0c-1.485,-0 -2.876,-0.572 -3.919,-1.63 -0.933,-0.945 -1.423,-2.234 -1.345,-3.559 0.04,-0.69 0.614,-1.201 1.321,-1.169 0.689,0.04 1.215,0.634 1.174,1.324 -0.035,0.619 0.194,1.229 0.63,1.671 0.574,0.581 1.339,0.905 2.156,0.911 0.816,-0.045 1.587,-0.309 2.169,-0.882 1.622,-1.6 1.641,-4.221 0.041,-5.845 -2.124,-2.151 -5.6,-2.175 -7.754,-0.052 -0.493,0.485 -1.284,0.479 -1.768,-0.012 -0.484,-0.491 -0.479,-1.283 0.012,-1.768 3.133,-3.09 8.196,-3.055 11.287,0.076C29.014,5.42 28.985,9.605 26.381,12.172 25.334,13.206 23.947,13.75 22.477,13.75"
+                android:strokeColor="#00000000" />
+        </group>
     </group>
-  </group>
 </vector>
